--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,17 +17,16 @@ license = { file = "LICENSE" }
 authors = [
     { name = "Diamond Light Source - Data Analysis et al.", email = "dataanalysis@diamond.ac.uk" },
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: BSD License",
     "Natural Language :: English",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
     "defusedxml", # CLEM workflow
@@ -46,8 +45,8 @@ dependencies = [
     "starfile",
     "stomp-py==8.1.0",
     "tifffile", # CLEM workflow
-    "workflows",
-    "zocalo>=1",
+    "workflows>=3",
+    "zocalo>=1.2",
 ]
 [project.optional-dependencies]
 dev = [
