--- a/Helm/Chart.yaml
+++ b/Helm/Chart.yaml
@@ -9,7 +9,6 @@ dependencies:
   - name: ctffind
   - name: denoise
   - name: denoise_slurm
-  - name: dispatcher
   - name: extract
   - name: extract_class
   - name: icebreaker
@@ -19,6 +18,7 @@ dependencies:
   - name: motioncorr
   - name: node_creator
   - name: postprocess
+  - name: process_recipe
   - name: select_classes
   - name: select_particles
   - name: tomo_align
