--- a/Helm/charts/bfactor_setup/templates/deployment.yaml
+++ b/Helm/charts/bfactor_setup/templates/deployment.yaml
@@ -31,18 +31,11 @@ spec:
           - -c
           - >-
               {{ .Values.command }}
-        env:
-        - name: KUBERNETES
-          value: "1"
-        - name: ZOCALO_CONFIG
-          value: "/zocalo/config/{{ .Values.global.configFileName }}"
-        - name: ISPYB_CREDENTIALS
-          value: "/zocalo/secrets/{{ .Values.global.dbFileName }}"
         volumeMounts:
         - name: config-file
-          mountPath: /zocalo/config
+          mountPath: /cryoemservices/config
         - name: secrets
-          mountPath: /zocalo/secrets
+          mountPath: /cryoemservices/secrets
 {{- if .Values.extraVolumeMounts }}
 {{ toYaml .Values.extraVolumeMounts | indent 8 }}
 {{ end }}
@@ -54,8 +47,6 @@ spec:
         projected:
           defaultMode: 0444
           sources:
-          - secret:
-              name: {{ .Values.global.dbSecretName }}
           - secret:
               name: {{ .Values.global.rmqSecretName }}
           - secret:
