--- a/Helm/charts/process_recipe/templates/deployment.yaml
+++ b/Helm/charts/process_recipe/templates/deployment.yaml
@@ -32,17 +32,13 @@ spec:
           - >-
               {{ .Values.command }}
         env:
-        - name: KUBERNETES
-          value: "1"
-        - name: ZOCALO_CONFIG
-          value: "/zocalo/config/{{ .Values.global.configFileName }}"
         - name: ISPYB_CREDENTIALS
-          value: "/zocalo/secrets/{{ .Values.global.dbFileName }}"
+          value: "/cryoemservices/secrets/{{ .Values.global.dbFileName }}"
         volumeMounts:
         - name: config-file
-          mountPath: /zocalo/config
+          mountPath: /cryoemservices/config
         - name: secrets
-          mountPath: /zocalo/secrets
+          mountPath: /cryoemservices/secrets
 {{- if .Values.extraVolumeMounts }}
 {{ toYaml .Values.extraVolumeMounts | indent 8 }}
 {{ end }}
