--- a/Helm/charts/tomo_align/templates/deployment.yaml
+++ b/Helm/charts/tomo_align/templates/deployment.yaml
@@ -32,21 +32,15 @@ spec:
           - >-
               {{ .Values.command }}
         env:
-        - name: KUBERNETES
-          value: "1"
-        - name: ZOCALO_CONFIG
-          value: "/zocalo/config/{{ .Values.global.configFileName }}"
-        - name: ISPYB_CREDENTIALS
-          value: "/zocalo/secrets/{{ .Values.global.dbFileName }}"
         - name: LD_LIBRARY_PATH
           value: "/IMOD/4.11.1/IMOD/lib:/IMOD/4.11.1/IMOD/qtlib"
         - name: IMOD_DIR
           value: "/IMOD/4.11.1/IMOD"
         volumeMounts:
         - name: config-file
-          mountPath: /zocalo/config
+          mountPath: /cryoemservices/config
         - name: secrets
-          mountPath: /zocalo/secrets
+          mountPath: /cryoemservices/secrets
 {{- if .Values.extraVolumeMounts }}
 {{ toYaml .Values.extraVolumeMounts | indent 8 }}
 {{ end }}
@@ -58,8 +52,6 @@ spec:
         projected:
           defaultMode: 0444
           sources:
-          - secret: 
-              name: {{ .Values.global.dbSecretName }}
           - secret:
               name: {{ .Values.global.rmqSecretName }}
           - secret:
