--- a/Helm/values.yaml
+++ b/Helm/values.yaml
@@ -2,12 +2,21 @@ global:
   namespace: my-namespace
   runAsUser: user-id
   runAsGroup: group-id
-  configMap: zocalo-conf
+  rmqHost: http://user:password@host:port
+  configMap: cryoemservices-pod-config
+  configFileName: cryoemservices_config.yaml
+  dbSecretName: ispyb
+  dbFileName: ispyb.cfg
+  rmqSecretName: rmq-creds-k8s
+  rmqApiSecretName: rmq-api-reader-k8s
 
 bfactor_setup:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s BFactor -c config-file
+  cpuRequest: "0.5"
+  cpuLimit: "1"
+  memoryLimit: 4Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -22,7 +31,10 @@ bfactor_setup:
 cluster_submission:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s ClusterSubmission -c config-file
+  cpuRequest: "0.25"
+  cpuLimit: "0.25"
+  memoryLimit: 256Mi
   extraVolumes:
     - name: home
       hostPath:
@@ -37,7 +49,10 @@ cluster_submission:
 cryolo:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s CrYOLO -c config-file
+  cpuRequest: "0.5"
+  cpuLimit: "1"
+  memoryLimit: 4Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -52,7 +67,10 @@ cryolo:
 ctffind:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s CTFFind -c config-file
+  cpuRequest: "0.25"
+  cpuLimit: "1"
+  memoryLimit: 2Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -67,37 +85,48 @@ ctffind:
 denoise:
   replicas: 1
   image: gcr.io/image/path
-  command: zocalo.service -s service-name -e environment
+  command: cryoemservices.service -s Denoise -c config-file
+  cpuRequest: "1"
+  cpuLimit: "1"
+  memoryLimit: 15Gi
   extraVolumes:
-    - name: dls
+    - name: home
       hostPath:
-        path: /dls
+        path: /home
         type: Directory
   extraVolumeMounts:
-    - mountPath: /dls
-      name: dls
+    - mountPath: /home
+      name: home
       mountPropagation: HostToContainer
       readOnly: true
+  denoisingSIF: topaz.sif
+  slurmCredentials: slurm_credentials.yaml
 
 denoise_slurm:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s DenoiseSlurm -c config-file
+  cpuRequest: "0.25"
+  cpuLimit: "1"
+  memoryLimit: 1Gi
   extraVolumes:
-    - name: dls
+    - name: home
       hostPath:
-        path: /dls
+        path: /home
         type: Directory
   extraVolumeMounts:
-    - mountPath: /dls
-      name: dls
+    - mountPath: /home
+      name: home
       mountPropagation: HostToContainer
       readOnly: true
 
 extract:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s Extract -c config-file
+  cpuRequest: "0.5"
+  cpuLimit: "1"
+  memoryLimit: 4Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -112,7 +141,10 @@ extract:
 extract_class:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s ExtractClass -c config-file
+  cpuRequest: "1"
+  cpuLimit: "4"
+  memoryLimit: 4Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -123,11 +155,15 @@ extract_class:
       name: home
       mountPropagation: HostToContainer
       readOnly: true
+  slurmCredentials: slurm_credentials.yaml
 
 icebreaker:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s IceBreaker -c config-file
+  cpuRequest: "0.5"
+  cpuLimit: "1"
+  memoryLimit: 4Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -138,11 +174,15 @@ icebreaker:
       name: home
       mountPropagation: HostToContainer
       readOnly: true
+  slurmCredentials: slurm_credentials.yaml
 
 images:
   replicas: 2
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s Images -c config-file
+  cpuRequest: "0.25"
+  cpuLimit: "1"
+  memoryLimit: 8Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -157,7 +197,10 @@ images:
 ispyb:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s ISPyB -c config-file
+  cpuRequest: "0.25"
+  cpuLimit: "1"
+  memoryLimit: 256Mi
   extraVolumes:
     - name: home
       hostPath:
@@ -172,7 +215,10 @@ ispyb:
 membrain_seg:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s MembrainSeg -c config-file
+  cpuRequest: "0.25"
+  cpuLimit: "0.5"
+  memoryLimit: 1Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -183,11 +229,15 @@ membrain_seg:
       name: home
       mountPropagation: HostToContainer
       readOnly: true
+  slurmCredentials: slurm_credentials.yaml
 
 motioncorr:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s MotionCorr -c config-file
+  cpuRequest: "4"
+  cpuLimit: "4"
+  memoryLimit: 15Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -198,11 +248,16 @@ motioncorr:
       name: home
       mountPropagation: HostToContainer
       readOnly: true
+  motioncorSIF: motioncor2.sif
+  slurmCredentials: slurm_credentials.yaml
 
 node_creator:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s NodeCreator -c config-file
+  cpuRequest: "0.25"
+  cpuLimit: "1"
+  memoryLimit: 4Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -217,7 +272,10 @@ node_creator:
 postprocess:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s PostProcess -c config-file
+  cpuRequest: "0.5"
+  cpuLimit: "1"
+  memoryLimit: 4Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -232,7 +290,10 @@ postprocess:
 process_recipe:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s ProcessRecipe -c config-file
+  cpuRequest: "0.5"
+  cpuLimit: "1"
+  memoryLimit: 256Mi
   extraVolumes:
     - name: home
       hostPath:
@@ -247,7 +308,10 @@ process_recipe:
 select_classes:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s SelectClasses -c config-file
+  cpuRequest: "1"
+  cpuLimit: "1"
+  memoryLimit: 4Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -262,7 +326,10 @@ select_classes:
 select_particles:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s SelectParticles -c config-file
+  cpuRequest: "0.5"
+  cpuLimit: "1"
+  memoryLimit: 1Gi
   extraVolumes:
     - name: home
       hostPath:
@@ -277,29 +344,36 @@ select_particles:
 tomo_align:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s TomoAlign -c config-file
+  memoryLimit: 20Gi
   extraVolumes:
-    - name: dls
+    - name: home
       hostPath:
-        path: /dls
+        path: /home
         type: Directory
   extraVolumeMounts:
-    - mountPath: /dls
-      name: dls
+    - mountPath: /home
+      name: home
       mountPropagation: HostToContainer
       readOnly: true
 
 tomo_align_slurm:
   replicas: 1
   image: gcr.io/image/path
-  command: cryoemservices.service -s service-name -c config-file
+  command: cryoemservices.service -s TomoAlignSlurm -c config-file
+  cpuRequest: "0.75"
+  cpuLimit: "1"
+  memoryLimit: 4Gi
   extraVolumes:
-    - name: dls
+    - name: home
       hostPath:
-        path: /dls
+        path: /home
         type: Directory
   extraVolumeMounts:
-    - mountPath: /dls
-      name: dls
+    - mountPath: /home
+      name: home
       mountPropagation: HostToContainer
       readOnly: true
+  aretomoExectable: /path/to/AreTomo2
+  extraLibraries: /path/to/aretomo/lib
+  slurmCredentials: slurm_credentials.yaml
