--- a/Helm/charts/extract_class/templates/deployment.yaml
+++ b/Helm/charts/extract_class/templates/deployment.yaml
@@ -39,6 +39,9 @@ spec:
           mountPath: /cryoemservices/config
         - name: secrets
           mountPath: /cryoemservices/secrets
+{{- if .Values.extraGlobalVolumeMounts }}
+{{ toYaml .Values.extraGlobalVolumeMounts | indent 8 }}
+{{ end }}
 {{- if .Values.extraVolumeMounts }}
 {{ toYaml .Values.extraVolumeMounts | indent 8 }}
 {{ end }}
@@ -54,6 +57,9 @@ spec:
               name: {{ .Values.global.rmqSecretName }}
           - secret:
               name: {{ .Values.global.rmqApiSecretName }}
+{{- if .Values.extraGlobalVolumes }}
+{{ toYaml .Values.extraGlobalVolumes | indent 6 }}
+{{ end }}
 {{- if .Values.extraVolumes }}
 {{ toYaml .Values.extraVolumes | indent 6 }}
 {{ end }}
