--- a/Helm/charts/select_classes/templates/deployment.yaml
+++ b/Helm/charts/select_classes/templates/deployment.yaml
@@ -36,6 +36,9 @@ spec:
           mountPath: /cryoemservices/config
         - name: secrets
           mountPath: /cryoemservices/secrets
+{{- if .Values.extraGlobalVolumeMounts }}
+{{ toYaml .Values.extraGlobalVolumeMounts | indent 8 }}
+{{ end }}
 {{- if .Values.extraVolumeMounts }}
 {{ toYaml .Values.extraVolumeMounts | indent 8 }}
 {{ end }}
@@ -51,9 +54,13 @@ spec:
               name: {{ .Values.global.rmqSecretName }}
           - secret:
               name: {{ .Values.global.rmqApiSecretName }}
+{{- if .Values.extraGlobalVolumes }}
+{{ toYaml .Values.extraGlobalVolumes | indent 6 }}
+{{ end }}
 {{- if .Values.extraVolumes }}
 {{ toYaml .Values.extraVolumes | indent 6 }}
 {{ end }}
+
 {{- if .Values.scaleOnQueueLength }}
 ---
 apiVersion: keda.sh/v1alpha1
