--- a/Helm/charts/tomo_align_slurm/templates/deployment.yaml
+++ b/Helm/charts/tomo_align_slurm/templates/deployment.yaml
@@ -47,6 +47,9 @@ spec:
           mountPath: /cryoemservices/config
         - name: secrets
           mountPath: /cryoemservices/secrets
+{{- if .Values.extraGlobalVolumeMounts }}
+{{ toYaml .Values.extraGlobalVolumeMounts | indent 8 }}
+{{ end }}
 {{- if .Values.extraVolumeMounts }}
 {{ toYaml .Values.extraVolumeMounts | indent 8 }}
 {{ end }}
@@ -62,6 +65,9 @@ spec:
               name: {{ .Values.global.rmqSecretName }}
           - secret:
               name: {{ .Values.global.rmqApiSecretName }}
+{{- if .Values.extraGlobalVolumes }}
+{{ toYaml .Values.extraGlobalVolumes | indent 6 }}
+{{ end }}
 {{- if .Values.extraVolumes }}
 {{ toYaml .Values.extraVolumes | indent 6 }}
 {{ end }}
