--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,9 @@ dependencies = [
     "pillow",
     "plotly",
     "pydantic>=2",
+    "pystackreg", # CLEM workflow
     "readlif", # CLEM workflow
+    "SimpleITK", # CLEM workflow
     "starfile",
     "stomp-py==8.1.0",
     "tifffile", # CLEM workflow
